# argus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  accounts.yaml.example  function_app.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
0.5.0/concepts/: index.html
0.5.0/contributing/: index.html
0.5.0/deployment/: index.html
0.5.0/reference/: index.html
adapters/: base.py
adapters/aws/: adapter.py  auth.py  cloudtrail.py  cloudwatch.py  config.py  cost_explorer.py  resource_explorer.py  retry.py
adapters/azure/: activity_log.py  adapter.py  cost_management.py  monitor.py  resource_graph.py  retry.py
adapters/gcp/: adapter.py  asset_inventory.py  billing.py  cloud_logging.py  cloud_monitoring.py  retry.py
ai/: anthropic.py  azure_openai.py  base.py  bedrock.py  vertexai.py
config/: integrations.yaml.example  settings.py
config/policies/: aws-ebs-delete-unattached.yaml  aws-ec2-stop-idle.yaml  aws-elasticache-delete-idle.yaml  aws-elb-delete-idle.yaml  aws-lambda-delete-unused.yaml  aws-rds-resize-idle.yaml  aws-redshift-snapshot-delete.yaml  azure-aks-reduce-nodes.yaml  azure-sql-resize-underutilised.yaml  azure-vm-stop-idle.yaml  gcp-compute-stop-idle.yaml  gcp-gke-reduce-nodes.yaml  gcp-sql-stop-idle.yaml
config/policies.example/: 01-ec2-stop-idle.yaml  02-rds-resize.yaml  03-gcp-gce-stop-idle.yaml
core/: config.py  log.py  secrets.py  token_tracker.py  validation.py
core/agent/: chat.py  loop.py  prompts.py
core/models/: finding.py
core/registry/: __init__.py  aws.py  azure.py  factory.py  gcp.py  models.py  registry.py
core/remediation/: __init__.py  audit.py  engine.py  loader.py  models.py  rightsizing.py  validator.py
core/reports/: comparison.py  delivery.py  export.py  generator.py  html.py  multi_cloud.py
deploy/aws/: single-account.yaml
deploy/azure/: function-app.bicep
deploy/gcp/: deploy.sh
dev/: 404.html  index.html  sitemap.xml
dev/blog/: index.html
dev/getting-started/: index.html
dev/remediation/: index.html
dev/roadmap/: index.html
dev/search/: search_index.json
docs/: index.md  roadmap.md
docs/blog/: .authors.yml
docs/concepts/: adapters.md  ai-providers.md  ai-reasoning.md  how-it-works.md  index.md
docs/contributing/: development.md  index.md  new-adapter.md  new-ai-provider.md
docs/deployment/: aws.md  azure.md  (+3 more)
entrypoints/: _remediation.py  aws_lambda.py  azure_function.py  cli.py  cli_chat.py  gcp_cloudrun.py
examples/: chat_demo.py  sample-report-aws.json  sample-report-azure.json  sample-report-gcp.json
integrations/: base.py
requirements/: aws.txt  azure.txt  base.txt  dev.txt  gcp.txt
tests/: conftest.py
(+117 files in other folders)
