[project]
name = "argus-cloud-optimizer"
version = "0.1.0"
description = "AI-powered multi-cloud cost optimization agent"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Vamshi Siddarth Gaddam", email = "vamshisiddarth02@gmail.com" },
]
keywords = ["cloud", "cost-optimization", "aws", "gcp", "azure", "finops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.35.36",
    "botocore>=1.35.36",
]
gcp = [
    "google-cloud-asset>=3.26.0",
    "google-cloud-monitoring>=2.23.0",
    "google-cloud-billing>=1.14.0",
    "google-cloud-logging>=3.11.3",
    "openai>=1.55.0",
]
azure = [
    "azure-identity>=1.19.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-monitor-query>=1.4.0",
    "azure-mgmt-costmanagement>=4.0.0",
    "openai>=1.55.0",
]
export = [
    "weasyprint>=62.0",
    "python-pptx>=1.0.0",
]
dev = [
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "moto[s3,sts]>=5.0.16",
    "freezegun>=1.5.1",
    "black>=24.10.0",
    "ruff>=0.7.1",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.12",
    "types-python-dateutil>=2.9.0",
    "boto3-stubs[s3,sts,resourceexplorer2,cloudwatch,ce,bedrock-runtime]>=1.35.36",
    "mkdocs-material>=9.5.44",
    "mkdocs-minify-plugin>=0.8.0",
]

[project.scripts]
argus = "entrypoints.cli:main"

[project.urls]
Homepage = "https://github.com/vamshisiddarth/argus"
Documentation = "https://vamshisiddarth.github.io/argus/"
Repository = "https://github.com/vamshisiddarth/argus"
Issues = "https://github.com/vamshisiddarth/argus/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "adapters*", "ai*", "entrypoints*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "BLE"]

[tool.ruff.lint.per-file-ignores]
"core/reports/html.py" = ["E501"]
"core/agent/prompts.py" = ["E501"]
"tests/adapters/azure/*.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--tb=short --timeout=30 --strict-markers"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
